--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.lith.lithcore</groupId>
   <artifactId>lithcore</artifactId>
-  <version>0.1.0</version>
+  <version>0.2.0</version>
 
   <name>LithCore</name>
   <packaging>jar</packaging>
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>io.papermc.paper</groupId>
       <artifactId>paper-api</artifactId>
-      <version>1.20.4-R0.1-SNAPSHOT</version>
+      <version>1.20.6-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
 
@@ -37,7 +37,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>${project.name}</finalName>
+    <finalName>${project.name}-${project.version}</finalName>
     <plugins>
 
       <plugin>
