--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,12 +1,12 @@
 name: LithCore
 main: com.lith.lithcore.Plugin
 
-version: 0.1.0
+version: 0.2.0
 api-version: 1.20
 
 description: A Core plugin for all my MineCraft plugins
 author: Lith
-website: https://github.com/ImLith/tpa
+website: https://github.com/ImLith/LithCore
 
 depend: []
 softdepend: []
